--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>BayesUp</title>
+    <title>Bayes-Up</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
