--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
+    <!--ADDED FOR REACT-LATEX-->
+    <link
+      href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.css"
+      rel="stylesheet"
+    />
+
     <title>Bayes-Up</title>
   </head>
   <body>
